--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -33,7 +33,12 @@
     "reflect-metadata": "^0.1.13",
     "resend": "^3.2.0",
     "rxjs": "^7.8.1",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "multer": "^1.4.5-lts.1",
+    "axios": "^1.6.0",
+    "uuid": "^9.0.1",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -41,8 +46,12 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^24.10.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/form-data": "^2.5.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
