--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -20,26 +20,25 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "^6.0.0",
+    "@sendgrid/mail": "^8.1.6",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "form-data": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "resend": "^3.2.0",
     "rxjs": "^7.8.1",
     "speakeasy": "^2.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "multer": "^1.4.5-lts.1",
-    "axios": "^1.6.0",
-    "uuid": "^9.0.1",
-    "form-data": "^4.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -48,10 +47,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/form-data": "^2.5.0",
     "@types/multer": "^1.4.11",
     "@types/node": "^24.10.1",
     "@types/passport-jwt": "^4.0.1",
-    "@types/form-data": "^2.5.0",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
