--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ q_nest/node_modules/
 q_nest/storage/
 q_python/venv
 q_python/.venv
+q_python/venv*/
+q_python/.venv*/
 q_python/.env
 q_python/src/__pycache__/
