--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -24,6 +24,10 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^5.1.1",
+    "@nestjs/bullmq": "^10.0.1",
+    "@nestjs/schedule": "^4.0.0",
+    "bullmq": "^5.0.0",
+    "ioredis": "^5.3.2",
     "@prisma/client": "^6.0.0",
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.6.0",
