--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -17,26 +17,27 @@
     "prisma:migrate:reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/throttler": "^5.1.1",
-    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/schedule": "^4.0.0",
-    "bullmq": "^5.0.0",
-    "ioredis": "^5.3.2",
+    "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "^6.0.0",
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
+    "google-auth-library": "^10.5.0",
+    "ioredis": "^5.3.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
