--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -24,8 +24,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/throttler": "^5.1.1",
+    "@nestjs/websockets": "^10.0.0",
     "@prisma/client": "^6.0.0",
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.6.0",
@@ -43,6 +45,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.6.0",
     "speakeasy": "^2.0.0",
     "uuid": "^9.0.1"
   },
@@ -54,6 +57,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/form-data": "^2.5.0",
+    "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.11",
     "@types/node": "^24.10.1",
     "@types/passport-jwt": "^4.0.1",
@@ -61,8 +65,11 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
+    "jest": "^29.7.0",
     "prisma": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "source-map-support": "^0.5.21",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
