--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/main",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main.js",
     "dev": "npm run start:dev",
     "prisma:validate": "prisma validate",
     "prisma:format": "prisma format",
