--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -46,15 +46,17 @@
     "speakeasy": "^2.0.0",
     "uuid": "^9.0.1"
   },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11"
+  },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.21",
     "@types/form-data": "^2.5.0",
-    "@types/multer": "^1.4.11",
     "@types/node": "^24.10.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/uuid": "^9.0.7",
