--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.0.0",
+    "ccxt": "^4.5.28",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^1.41.0",
@@ -47,14 +48,14 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
     "@types/form-data": "^2.5.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^24.10.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/uuid": "^9.0.7",
