--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -52,13 +52,19 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.6",
+    "@types/connect": "^3.4.38",
     "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.21",
-    "@types/form-data": "^2.5.0",
+    "@types/express": "^4.17.25",
+    "@types/express-serve-static-core": "^5.1.0",
+    "@types/form-data": "^2.5.2",
+    "@types/http-errors": "^2.0.5",
+    "@types/json-schema": "^7.0.15",
     "@types/multer": "^1.4.11",
     "@types/node": "^24.10.1",
+    "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
