--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -33,6 +33,7 @@
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "bullmq": "^5.0.0",
     "ccxt": "^4.5.28",
     "class-transformer": "^0.5.1",
