--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -8,6 +8,10 @@
     "start:debug": "npx -p @nestjs/cli nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
     "dev": "npm run start:dev",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:validate": "prisma validate",
     "prisma:format": "prisma format",
     "prisma:generate": "npx prisma@6.19.0 generate",
@@ -66,18 +70,23 @@
     "@types/express-serve-static-core": "^5.1.0",
     "@types/form-data": "^2.5.2",
     "@types/http-errors": "^2.0.5",
+    "@types/jest": "^30.0.0",
     "@types/json-schema": "^7.0.15",
     "@types/multer": "^1.4.11",
     "@types/node": "^24.10.1",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
+    "jest": "^30.2.0",
     "prisma": "^6.0.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
