--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -24,7 +24,7 @@
     "@google/generative-ai": "^0.24.1",
     "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
+    "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
@@ -35,6 +35,7 @@
     "@nestjs/websockets": "^10.0.0",
     "@prisma/client": "^6.0.0",
     "@sendgrid/mail": "^8.1.6",
+    "@types/compression": "^1.8.1",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.3",
@@ -43,6 +44,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.9.0",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
     "google-auth-library": "^10.5.0",
@@ -59,7 +61,7 @@
     "ws": "^8.14.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.9",
+    "@nestjs/cli": "^11.0.16",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
