--- a/q_nest/package.json
+++ b/q_nest/package.json
@@ -46,6 +46,7 @@
     "cookie-parser": "^1.4.6",
     "form-data": "^4.0.0",
     "google-auth-library": "^10.5.0",
+    "i18n-iso-countries": "^7.14.0",
     "ioredis": "^5.3.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^6.15.0",
